err/coopr.pysp.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/coopr'...
Listing './lib/python3.5/site-packages/coopr/pysp'...
Compiling './lib/python3.5/site-packages/coopr/pysp/ef_vss.py'...
***   File "./lib/python3.5/site-packages/coopr/pysp/ef_vss.py", line 40
    print "Fixing first stage variables at mean instance solution values."
                                                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/coopr/pysp/lagrangeMorePR.py'...
***   File "./lib/python3.5/site-packages/coopr/pysp/lagrangeMorePR.py", line 32
    print "lagrangeMorePR begins ",str(datetime.datetime.now())
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/coopr/pysp/lagrangeParam.py'...
***   File "./lib/python3.5/site-packages/coopr/pysp/lagrangeParam.py", line 28
    print "RUNNING - run args=",args
                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/coopr/pysp/plugins'...
Compiling './lib/python3.5/site-packages/coopr/pysp/plugins/sorgw.py'...
***   File "./lib/python3.5/site-packages/coopr/pysp/plugins/sorgw.py", line 147
    if iternum <> curriter:
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/coopr/pysp/tests'...
Listing './lib/python3.5/site-packages/coopr/pysp/tests/examples'...
Listing './lib/python3.5/site-packages/coopr/pysp/tests/unit'...
Listing './lib/python3.5/site-packages/coopr/pysp/util'...
Listing './lib/python3.5/site-packages/coopr.pysp-3.5.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
